--- a/src/store.html
+++ b/src/store.html
@@ -40,19 +40,19 @@
                 <nav class="store__nav">
                     <ul class="store__categories">
                         <li class="store__category-item">
-                            <button class="store__category-button store__category-button--active">Домики</button>
+                            <button type="button" class="store__category-button store__category-button--active" aria-label="Навигация по категориям">Домики</button>
                         </li>
                         <li class="store__category-item">
-                            <button class="store__category-button">Лежанки</button>
+                            <button type="button" class="store__category-button" aria-label="Навигация по категориям">Лежанки</button>
                         </li>
                         <li class="store__category-item">
-                            <button class="store__category-button">Игрушки</button>
+                            <button type="button" class="store__category-button" aria-label="Навигация по категориям">Игрушки</button>
                         </li>
                         <li class="store__category-item">
-                            <button class="store__category-button">Корма</button>
+                            <button type="button" class="store__category-button" aria-label="Навигация по категориям">Корма</button>
                         </li>
                     </ul>
-                    <button class="store__cart-button">
+                    <button type="button" class="store__cart-button" aria-label="Открывает корзину">
                         <span class="store__cart-cnt">0</span>
                         <svg class="store__cart-icon" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="18" cy="14" r="2" fill="#E47537"/>
@@ -65,61 +65,6 @@
                 <h2 class="store__title">Каталог</h2>
                 
                 <ul class="store__list">
-
-                    <!-- <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo.webp" src="/img/photo.jpg" alt="Скандинавский домик для собаки" class="product__image">
-                            <h3 class="product__title">Скандинавский домик для собаки</h3>
-                            <p class="product__price">5400&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li>
-
-                    <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo-1.webp" src="/img/photo-1.jpg" alt="Домик со съемной крышей" class="product__image">
-                            <h3 class="product__title">Домик со&nbsp;съемной крышей</h3>
-                            <p class="product__price">7200&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li>
-
-                    <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo-2.webp" src="/img/photo-2.jpg" alt="Скандинавский домик для собаки" class="product__image">
-                            <h3 class="product__title">Скандинавский домик для собаки</h3>
-                            <p class="product__price">5400&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li>
-
-                    <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo-3.webp" src="/img/photo-3.jpg" alt="Скандинавский домик для собаки" class="product__image">
-                            <h3 class="product__title">Скандинавский домик для собаки</h3>
-                            <p class="product__price">5400&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li>
-
-                    <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo-4.webp" src="/img/photo-4.jpg" alt="Скандинавский домик для собаки" class="product__image">
-                            <h3 class="product__title">Скандинавский домик для собаки</h3>
-                            <p class="product__price">5400&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li>
-
-                    <li class="store__item">
-                        <article class="store__product product">
-                            <img srcset="/img/photo-5.webp" src="/img/photo-5.jpg" alt="Скандинавский домик для собаки" class="product__image">
-                            <h3 class="product__title">Скандинавский домик для собаки</h3>
-                            <p class="product__price">5400&nbsp;₽</p>
-                            <button class="product__btn-add-cart">Заказать</button>
-                        </article>
-                    </li> -->
-
                 </ul>
 
             </div>
@@ -187,26 +132,6 @@
         <div class="modal__content">
             <h2 class="modal__title">Корзина</h2>
             <ul class="modal__cart-items">
-                <!-- <li class="modal__cart-item">
-                    <img src="img/photo-1.jpg" alt="" class="modal__cart-item-image">
-                    <h3 class="modal__cart-item-title">Название товара</h3>
-                    <div class="modal__cart-item-count">
-                        <button class="modal__btn modal__minus">-</button>
-                        <span class="modal__count">1</span>
-                        <button class="modal__btn modal__plus">+</button>
-                    </div>
-                    <p class="modal__cart-item-price">5000&nbsp;₽</p>
-                </li>
-                <li class="modal__cart-item">
-                    <img src="img/photo-1.jpg" alt="" class="modal__cart-item-image">
-                    <h3 class="modal__cart-item-title">Название товара</h3>
-                    <div class="modal__cart-item-count">
-                        <button class="modal__btn modal__minus">-</button>
-                        <span class="modal__count">1</span>
-                        <button class="modal__btn modal__plus">+</button>
-                    </div>
-                    <p class="modal__cart-item-price">5000&nbsp;₽</p>
-                </li> -->
             </ul>
 
             <form class="modal__cart-form">
@@ -240,13 +165,13 @@
     <button class="modal-overlay__close-button">&times;</button>
 </div>
 
-<div class="preloader__block">
+<!-- <div class="preloader__block">
     <div class="preload__img">
     <svg class="preload__img-svg" width="100" height="100" viewbox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M14.0002 50.0005C14.0002 69.8825 30.1182 86.0005 50.0002 86.0005C69.8822 86.0005 86.0002 69.8825 86.0002 50.0005C86.0002 30.1185 69.8823 14.0005 50.0003 14.0005C45.3513 14.0005 40.9082 14.8815 36.8282 16.4865" stroke="#e47537" stroke-width="8" stroke-miterlimit="10" stroke-linecap="round"/>
     </svg>
     </div>
-</div>
+</div> -->
 
 </body>
 
